<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_qr_code_scanner"
        android:title="@string/scan_barcode"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/backup"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    
</menu>